<?xml version="1.0"?>
<package format="2">
  <name>dlsc_gc_planner</name>
  <version>0.0.1</version>
  <description> The dlsc_gc_planner package </description>

  <maintainer email="wjstk335@gmail.com">Jungwon Park</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>dlsc_gc_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>dlsc_gc_msgs</exec_depend>

  <export>

  </export>
</package>
